--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=${SERVER_PORT}
+server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # jdbc:postgresql://ip:port/database_name
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/practic2
+spring.datasource.username=root1
+spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
